--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,15 +1,19 @@
-.modal {
-    /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+body {
+    background: white;
 }
+
+.container {
+    width: 90%;
+    margin: 5% auto;
+    background-color: #ffeded;
+}
+
+
+.recipesContainer{
+    background-color: blue;
+}
+
+
 
 .none {
   display: none;
@@ -18,14 +22,8 @@
   display:block;
 }
 
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-}
+
+
 
 /* The Close Button */
 .close {
@@ -43,27 +41,17 @@
 }
 
 
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-}
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
     background-color: #ccc;
 }
 
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-    padding: 0 18px;
-    background-color: white;
-    overflow: hidden;
-}
+
+
+ @media (min-width: 700px) {
+     .container{
+      width: 80%;
+     }
+
+  }
