--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -55,3 +55,13 @@ body {
      }
 
   }
+
+  .error { border: 4px solid red; }
+
+  .disabled {
+      background-color: #d5e0df;
+  }
+
+  .enabled {
+    background-color: #b5fcf7;
+  }
