--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,67 +1,72 @@
 body {
-    background: white;
-}
-
-.container {
-    width: 90%;
-    margin: 5% auto;
-    background-color: #ffeded;
+  background: #f5f5f5;
+  font-family: 'Roboto Mono', monospace;
 }
 
 
-.recipesContainer{
-    background-color: blue;
+
+.app {
+  width: 100%;
+  background-color: white;
+  height: 100vh;
+}
+.recipe-list-container {
+  position: absolute;
+  margin-left: 5%;
+  margin-top: -20%;
+  width: 90%;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #808084;
+
 }
 
-
+.recipesContainer {
+  background-color: blue;
+}
 
 .none {
   display: none;
 }
-.block{
-  display:block;
+.block {
+  display: block;
 }
-
-
-
 
 /* The Close Button */
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
-
-
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-    background-color: #ccc;
+.active,
+.accordion:hover {
+  background-color: #ccc;
 }
 
-
-
- @media (min-width: 700px) {
-     .container{
-      width: 80%;
-     }
-
+@media (min-width: 700px) {
+  .container {
+    width: 80%;
   }
+}
 
-  .error { border: 4px solid red; }
+.error {
+  border: 4px solid red;
+}
 
-  .disabled {
-      background-color: #d5e0df;
-  }
+.disabled {
+  background-color: #d5e0df;
+}
 
-  .enabled {
-    background-color: #b5fcf7;
-  }
+.enabled {
+  background-color: #b5fcf7;
+}
