--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -51,8 +51,12 @@ body {
 
 
 .error {
-  border: 4px solid red;
+  border: 4px solid #F75757;
 }
+.no-error {
+  border: 2px solid #d9d9d9;
+}
+
 
 .disabled {
   background-color: #d5e0df;
